--- a/views/tables.html
+++ b/views/tables.html
@@ -329,6 +329,17 @@
 											<!--end::Search-->
 										</div>
 										<!--end::Card title-->
+										<div class="card-toolbar">
+											<a href="#" class="btn btn-sm btn-light-primary">
+											<!--begin::Svg Icon | path: icons/duotune/arrows/arr075.svg-->
+											<span class="svg-icon svg-icon-2">
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+													<rect opacity="0.5" x="11.364" y="20.364" width="16" height="2" rx="1" transform="rotate(-90 11.364 20.364)" fill="black" />
+													<rect x="4.36396" y="11.364" width="16" height="2" rx="1" fill="black" />
+												</svg>
+											</span>
+											<!--end::Svg Icon-->New Member</a>
+										</div>
 									</div>
 									<!--end::Card header-->
 									<!--begin::Card body-->
@@ -337,85 +348,44 @@
 										<table class="table align-middle table-row-dashed fs-6 gy-5" id="kt_ecommerce_category_table">
 											<!--begin::Table head-->
 											<thead>
-												<!--begin::Table row-->
-												<tr class="text-start text-gray-400 fw-bolder fs-7 text-uppercase gs-0">
-													<th class="w-10px pe-2">
-														<div class="form-check form-check-sm form-check-custom form-check-solid me-3">
-															<input class="form-check-input" type="checkbox" data-kt-check="true" data-kt-check-target="#kt_ecommerce_category_table .form-check-input" value="1" />
+												<tr class="fw-bolder text-muted">
+													<th class="w-25px">
+														<div class="form-check form-check-sm form-check-custom form-check-solid">
+															<input class="form-check-input" type="checkbox" value="1" data-kt-check="true" data-kt-check-target=".widget-13-check" />
 														</div>
 													</th>
-													<th class="min-w-250px">Category</th>
-													<th class="min-w-150px">Category Type</th>
-													<th class="text-end min-w-70px">Actions</th>
+													<th class="min-w-150px">Order Id</th>
+													<th class="min-w-140px">Box Category</th>
+													<th class="min-w-120px">Box Description</th>
+													<th class="min-w-120px">Total Sum</th>
+													<th class="min-w-100px text-end">Actions</th>
 												</tr>
-												<!--end::Table row-->
 											</thead>
 											<!--end::Table head-->
 											<!--begin::Table body-->
-											<tbody class="fw-bold text-gray-600">
-												<!--begin::Table row-->
+											<tbody>
 												<tr>
-													<!--begin::Checkbox-->
 													<td>
 														<div class="form-check form-check-sm form-check-custom form-check-solid">
-															<input class="form-check-input" type="checkbox" value="1" />
+															<input class="form-check-input widget-13-check" type="checkbox" value="1" />
 														</div>
 													</td>
-													<!--end::Checkbox-->
-													<!--begin::Category=-->
 													<td>
-														<div class="d-flex">
-															<!--begin::Thumbnail-->
-															<a href="../../demo1/dist/apps/ecommerce/catalog/edit-category.html" class="symbol symbol-50px">
-																<span class="symbol-label" style="background-image:url(assets/media//stock/ecommerce/151.gif);"></span>
-															</a>
-															<!--end::Thumbnail-->
-															<div class="ms-5">
-																<!--begin::Title-->
-																<a href="../../demo1/dist/apps/ecommerce/catalog/edit-category.html" class="text-gray-800 text-hover-primary fs-5 fw-bolder mb-1" data-kt-ecommerce-category-filter="category_name">Sandals</a>
-																<!--end::Title-->
-																<!--begin::Description-->
-																<div class="text-muted fs-7 fw-bolder">In season summer footwear with a huge range of options</div>
-																<!--end::Description-->
-															</div>
-														</div>
+														<a href="#" class="text-dark fw-bolder text-hover-primary fs-6">05822-FXSP</a>
 													</td>
-													<!--end::Category=-->
-													<!--begin::Type=-->
 													<td>
-														<!--begin::Badges-->
-														<div class="badge badge-light-success">Automated</div>
-														<!--end::Badges-->
+														<a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">04/18/2021</a>
 													</td>
-													<!--end::Type=-->
-													<!--begin::Action=-->
+													<td>
+														<a href="#" class="text-dark fw-bolder text-hover-primary d-block mb-1 fs-6">Agoda</a>
+													</td>
+													<td class="text-dark fw-bolder text-hover-primary fs-6">$4850</td>
 													<td class="text-end">
-														<a href="#" class="btn btn-sm btn-light btn-active-light-primary" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">Actions
-														<!--begin::Svg Icon | path: icons/duotune/arrows/arr072.svg-->
-														<span class="svg-icon svg-icon-5 m-0">
-															<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-																<path d="M11.4343 12.7344L7.25 8.55005C6.83579 8.13583 6.16421 8.13584 5.75 8.55005C5.33579 8.96426 5.33579 9.63583 5.75 10.05L11.2929 15.5929C11.6834 15.9835 12.3166 15.9835 12.7071 15.5929L18.25 10.05C18.6642 9.63584 18.6642 8.96426 18.25 8.55005C17.8358 8.13584 17.1642 8.13584 16.75 8.55005L12.5657 12.7344C12.2533 13.0468 11.7467 13.0468 11.4343 12.7344Z" fill="black" />
-															</svg>
-														</span>
-														<!--end::Svg Icon--></a>
-														<!--begin::Menu-->
-														<div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-bold fs-7 w-125px py-4" data-kt-menu="true">
-															<!--begin::Menu item-->
-															<div class="menu-item px-3">
-																<a href="../../demo1/dist/apps/ecommerce/catalog/add-category.html" class="menu-link px-3">Edit</a>
-															</div>
-															<!--end::Menu item-->
-															<!--begin::Menu item-->
-															<div class="menu-item px-3">
-																<a href="#" class="menu-link px-3" data-kt-ecommerce-category-filter="delete_row">Delete</a>
-															</div>
-															<!--end::Menu item-->
-														</div>
-														<!--end::Menu-->
+														<a href="#" class="btn btn-bg-light btn-danger btn-sm px-4 me-2">Delete</a>
+														<a href="#" class="btn btn-bg-light btn-primary btn-sm px-4">Edit</a>
 													</td>
-													<!--end::Action=-->
 												</tr>
-												<!--end::Table row-->
+												
 											</tbody>
 											<!--end::Table body-->
 										</table>
