--- a/views/html/register_box.html
+++ b/views/html/register_box.html
@@ -335,7 +335,7 @@
 							<!--begin::Container-->
 							<div id="kt_content_container" class="container-xxl">
 								<!--begin::Form-->
-								<form id="kt_ecommerce_edit_order_form" class="form d-flex flex-column flex-lg-row" data-kt-redirect="../../demo1/dist/apps/ecommerce/sales/listing.html">
+								<form id="kt_ecommerce_edit_order_form" class="form d-flex flex-column flex-lg-row" action="create_box" method="POST">
 									<!--begin::Aside column-->
 									<div class="w-100 flex-lg-row-auto w-lg-300px mb-7 me-7 me-lg-10">
 										<!--begin::Order details-->
@@ -353,20 +353,10 @@
 													<!--begin::Input group-->
 													<div class="fv-row">
 														<!--begin::Label-->
-														<label class="form-label">Order ID</label>
-														<!--end::Label-->
-														<!--begin::Auto-generated ID-->
-														<div class="fw-bolder fs-3">#14530</div>
-														<!--end::Input-->
-													</div>
-													<!--end::Input group-->
-													<!--begin::Input group-->
-													<div class="fv-row">
-														<!--begin::Label-->
 														<label class="required form-label">Box Name</label>
 														<!--end::Label-->
 														<!--begin::Select2-->
-														<input type="text" class="form-control" >
+														<input type="text" class="form-control" name="box_name">
 														<!--end::Select2-->
 													</div>
 													<!--end::Input group-->
@@ -376,7 +366,7 @@
 														<label class="required form-label">Box Description</label>
 														<!--end::Label-->
 														<!--begin::Select2-->
-														<input type="text" class="form-control" >
+														<input type="text" class="form-control" name="box_description" >
 														<!--end::Select2-->
 													</div>
 													<!--end::Input group-->
@@ -408,7 +398,7 @@
                                                                 <label class="required form-label">Product</label>
                                                                 <!--end::Label-->
                                                                 <!--begin::Select2-->
-                                                                <input type="text" class="form-control" >
+                                                                <input type="text" class="form-control" id="item" >
                                                                 <!--end::Select2-->
                                                             </div>
                                                             <!--end::Input group-->
@@ -420,7 +410,7 @@
                                                                 <label class="required form-label">Price</label>
                                                                 <!--end::Label-->
                                                                 <!--begin::Select2-->
-                                                                <input type="number" class="form-control" >
+                                                                <input type="number" class="form-control" id="price" >
                                                                 <!--end::Select2-->
                                                             </div>
                                                             <!--end::Input group-->
@@ -428,11 +418,9 @@
                                                         <!--begin::Input group-->
                                                         <div class="fv-row d-flex justify-content-end mt-2">
                                                             <!--begin::Button-->
-                                                            <button type="submit" id="kt_ecommerce_edit_order_submit" class="btn btn-primary">
-                                                                <span class="indicator-label">Add</span>
-                                                                <span class="indicator-progress">Please wait...
-                                                                <span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
-                                                            </button>
+                                                            <span id="kt_ecommerce_add_order_submit" class="btn btn-primary">
+                                                                Add
+                                                            </span>
                                                             <!--end::Button-->
                                                         </div>
                                                         <!--end::Input group-->
@@ -442,33 +430,21 @@
 													<div>
 														<!--begin::Selected products-->
 														<!--begin::Total price-->
-														<div class="fw-bolder fs-4">Total Cost: $
-														<span id="kt_ecommerce_edit_order_total_price">0.00</span></div>
+														<div class="fw-bolder fs-4">Total Cost:  &#8358;
+															<span id="kt_ecommerce_edit_order_total_price">0.00</span>
+															<input type="text" id="total_price" name="total_price">
+														</div>
 														<!--end::Total price-->
 													</div>
 													<!--end::Input group-->
 													<!--begin::Separator-->
 													<div class="separator"></div>
 													<!--end::Separator-->
-													<!--begin::Search products-->
-													<div class="d-flex align-items-center position-relative mb-n7">
-														<!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
-														<span class="svg-icon svg-icon-1 position-absolute ms-4">
-															<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-																<rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="black" />
-																<path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="black" />
-															</svg>
-														</span>
-														<!--end::Svg Icon-->
-														<input type="text" data-kt-ecommerce-edit-order-filter="search" class="form-control form-control-solid w-100 w-lg-50 ps-14" placeholder="Search Products" />
-													</div>
-													<!--end::Search products-->
 													<!--begin::Table-->
 													<table class="table align-middle table-row-dashed fs-6 gy-5" id="kt_ecommerce_edit_order_product_table">
 														<!--begin::Table head-->
 														<thead>
 															<tr class="text-start text-gray-400 fw-bolder fs-7 text-uppercase gs-0">
-																<th class="w-25px pe-2"></th>
 																<th class="min-w-200px">Product</th>
 																<th class="min-w-100px text-end pe-5">Action</th>
 															</tr>
@@ -476,40 +452,9 @@
 														<!--end::Table head-->
 
 														<!--begin::Table body-->
-														<tbody class="fw-bold text-gray-600">
+														<tbody class="fw-bold text-gray-600" id="cart">
 															<!--begin::Table row-->
-															<tr>
-																<!--begin::Checkbox-->
-																<td>
-																	<div class="form-check form-check-sm form-check-custom form-check-solid">
-																		<input class="form-check-input" type="checkbox" value="1" />
-																	</div>
-																</td>
-																<!--end::Checkbox-->
-																<!--begin::Product=-->
-																<td>
-																	<div class="d-flex align-items-center" data-kt-ecommerce-edit-order-filter="product" data-kt-ecommerce-edit-order-id="product_30">
-																		<div class="ms-5">
-																			<!--begin::Title-->
-																			<a href="../../demo1/dist/apps/ecommerce/catalog/edit-product.html" class="text-gray-800 text-hover-primary fs-5 fw-bolder">Product 30</a>
-																			<!--end::Title-->
-																			<!--begin::Price-->
-																			<div class="fw-bold fs-7">Price: $
-																			<span data-kt-ecommerce-edit-order-filter="price">183.00</span></div>
-																			<!--end::Price-->
-																			<!--begin::SKU-->
-																			<div class="text-muted fs-7">SKU: 01385001</div>
-																			<!--end::SKU-->
-																		</div>
-																	</div>
-																</td>
-																<!--end::Product=-->
-                                                                <!--begin::Qty=-->
-																<td class="text-end pe-5" data-order="22">
-																	<span class="fw-bolder text-danger ms-3">Remove</span>
-																</td>
-																<!--end::Qty=-->
-															</tr>
+															<tr id="total_price_container"></tr>
 															<!--end::Table row-->
 														</tbody>
 														<!--end::Table body-->
@@ -607,6 +552,7 @@
 		<!--begin::Global Javascript Bundle(used by all pages)-->
 		<script src="assets/plugins/global/plugins.bundle.js"></script>
 		<script src="assets/js/scripts.bundle.js"></script>
+		<script src="assets/js/carting.js"></script>
 		<!--end::Global Javascript Bundle-->
 		<!--begin::Page Vendors Javascript(used by this page)-->
 		<script src="assets/plugins/custom/datatables/datatables.bundle.js"></script>
