--- a/views/include/_order_form.ejs
+++ b/views/include/_order_form.ejs
@@ -1,5 +1,5 @@
 <!--begin::Form-->
-<form id="kt_ecommerce_edit_order_form" class="form d-flex flex-column flex-lg-row" action="create_box" method="POST">
+<form id="kt_ecommerce_edit_order_form" class="form d-flex flex-column flex-lg-row" action="/api/product" method="POST">
     <!--begin::Aside column-->
     <div class="w-100 flex-lg-row-auto w-lg-300px mb-7 me-7 me-lg-10">
         <!--begin::Order details-->
