--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -52,26 +52,50 @@
 <!--end::Scrolltop-->
 
 
-<!--begin::Javascript-->
+<!--begin::application javascript-->
+<script src="js/carting.js"></script>
+<script src="/js/application.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--end::application javascript-->
+
+
+
 <script>var hostUrl = "assets/";</script>
 <!--begin::Global Javascript Bundle(used by all pages)-->
 <script src="plugins/global/plugins.bundle.js"></script>
-<script src="js/carting.js"></script>
-
 <script src="js/scripts.bundle.js"></script>
-<script src="js/carting.js"></script>
+<!--end::Global Javascript Bundle-->
+<!--begin::Javascript-->
+<!--begin::Global Javascript Bundle(used by all pages)-->
+<script src="plugins/global/plugins.bundle.js"></script>
+<script src="js/scripts.bundle.js"></script>
 <!--end::Global Javascript Bundle-->
 <!--begin::Page Vendors Javascript(used by this page)-->
 <script src="plugins/custom/datatables/datatables.bundle.js"></script>
-<script src="plugins/custom/formrepeater/formrepeater.bundle.js"></script>
+<script src="plugins/custom/vis-timeline/vis-timeline.bundle.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/map.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/geodata/continentsLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/geodata/usaLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/geodata/worldTimeZonesLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/geodata/worldTimeZoneAreasLow.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
+<script src="https://cdn.amcharts.com/lib/5/radar.js"></script>
 <!--end::Page Vendors Javascript-->
 <!--begin::Page Custom Javascript(used by this page)-->
-<script src="js/custom/apps/ecommerce/sales/save-order.js"></script>
 <script src="js/widgets.bundle.js"></script>
 <script src="js/custom/widgets.js"></script>
 <script src="js/custom/apps/chat/chat.js"></script>
 <script src="js/custom/utilities/modals/upgrade-plan.js"></script>
-<script src="js/custom/utilities/modals/create-app.js"></script>
+<script src="js/custom/utilities/modals/offer-a-deal/type.js"></script>
+<script src="js/custom/utilities/modals/offer-a-deal/details.js"></script>
+<script src="js/custom/utilities/modals/offer-a-deal/finance.js"></script>
+<script src="js/custom/utilities/modals/offer-a-deal/complete.js"></script>
+<script src="js/custom/utilities/modals/offer-a-deal/main.js"></script>
 <script src="js/custom/utilities/modals/users-search.js"></script>
 <!--end::Page Custom Javascript-->
 <!--end::Javascript-->
