--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -34,7 +34,106 @@
 <!--begin::Drawers-->
 <!--end::Drawers-->
 <!--end::Main-->
-
+<!--begin::Modal - Create App-->
+<div class="modal fade" id="kt_modal_create_app" tabindex="-1" aria-hidden="true">
+    <!--begin::Modal dialog-->
+    <div class="modal-dialog modal-dialog-centered mw-900px">
+        <!--begin::Modal content-->
+        <div class="modal-content">
+            <!--begin::Modal header-->
+            <div class="modal-header">
+                <!--begin::Modal title-->
+                <h2>Upload Products</h2>
+                <!--end::Modal title-->
+                <!--begin::Close-->
+                <div class="btn btn-sm btn-icon btn-active-color-primary" data-bs-dismiss="modal">
+                    <!--begin::Svg Icon | path: icons/duotune/arrows/arr061.svg-->
+                    <span class="svg-icon svg-icon-1">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)" fill="black" />
+                            <rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="black" />
+                        </svg>
+                    </span>
+                    <!--end::Svg Icon-->
+                </div>
+                <!--end::Close-->
+            </div>
+            <!--end::Modal header-->
+            <!--begin::Modal body-->
+            <div class="modal-body py-lg-10 px-lg-10">
+                <!--begin::Stepper-->
+                <div class="stepper stepper-pills stepper-column d-flex flex-column flex-xl-row flex-row-fluid" id="kt_modal_create_app_stepper">
+                    <!--begin::Aside-->
+                    <div class="d-flex justify-content-center justify-content-xl-start flex-row-auto w-100 w-xl-300px">
+                        <!--begin::Nav-->
+                        <div class="stepper-nav ps-lg-10">
+                            <!--begin::Step 1-->
+                            <div class="stepper-item current" data-kt-stepper-element="nav">
+                                <!--begin::Line-->
+                                <div class="stepper-line w-40px"></div>
+                                <!--end::Line-->
+                                <!--begin::Icon-->
+                                <div class="stepper-icon w-40px h-40px">
+                                    <i class="stepper-check fas fa-check"></i>
+                                    <span class="stepper-number">1</span>
+                                </div>
+                                <!--end::Icon-->
+                                <!--begin::Label-->
+                                <div class="stepper-label">
+                                    <h3 class="stepper-title">Details</h3>
+                                    <div class="stepper-desc">Name your Product</div>
+                                </div>
+                                <!--end::Label-->
+                            </div>
+                            <!--end::Step 1-->
+                        </div>
+                        <!--end::Nav-->
+                    </div>
+                    <!--begin::Aside-->
+                    <!--begin::Content-->
+                    <div class="flex-row-fluid py-lg-5 px-lg-15">
+                        <!--begin::Form-->
+                        <form class="form" novalidate="novalidate" id="kt_modal_create_app_form" action="/api/upload/product" method="POST" >
+                            <!--begin::Step 1-->
+                            <div class="current" data-kt-stepper-element="content">
+                                <div class="w-100">
+                                    <!--begin::Input group-->
+                                    <div class="fv-row mb-10">
+                                        <!--begin::Label-->
+                                        <label class="d-flex align-items-center fs-5 fw-bold mb-2">
+                                            <span class="required">App Name</span>
+                                            <i class="fas fa-exclamation-circle ms-2 fs-7" data-bs-toggle="tooltip" title="Specify your product name"></i>
+                                        </label>
+                                        <!--end::Label-->
+                                        <!--begin::Input-->
+                                        <input type="text" class="form-control form-control-lg form-control-solid" name="product" placeholder="" value="" />
+                                        <!--end::Input-->
+                                    </div>
+                                    <!--end::Input group-->
+                                </div>
+                            </div>
+                            <!--end::Step 1-->
+                            <!--begin::Actions-->
+                            <div class="d-flex flex-stack pt-10">
+                                <!--begin::Wrapper-->
+                                <button type="submit" class="btn btn-lg btn-primary">Upload</button>
+                                <!--end::Wrapper-->
+                            </div>
+                            <!--end::Actions-->
+                        </form>
+                        <!--end::Form-->
+                    </div>
+                    <!--end::Content-->
+                </div>
+                <!--end::Stepper-->
+            </div>
+            <!--end::Modal body-->
+        </div>
+        <!--end::Modal content-->
+    </div>
+    <!--end::Modal dialog-->
+</div>
+<!--end::Modal - Create App-->
 
 
 
@@ -51,12 +150,12 @@
 </div>
 <!--end::Scrolltop-->
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!--begin::application javascript-->
-<script src="js/carting.js"></script>
-<script src="/js/application.js"></script>
+<!-- <script src="js/carting.js"></script> -->
+<script src="js/application.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <!--end::application javascript-->
 
 
@@ -97,6 +196,17 @@
 <script src="js/custom/utilities/modals/offer-a-deal/complete.js"></script>
 <script src="js/custom/utilities/modals/offer-a-deal/main.js"></script>
 <script src="js/custom/utilities/modals/users-search.js"></script>
+		<!--begin::Page Custom Javascript(used by this page)-->
+		<script src="jscustom/utilities/modals/create-app.js"></script>
+		<script src="jscustom/utilities/modals/create-campaign.js"></script>
+		<script src="jscustom/utilities/modals/create-project/type.js"></script>
+		<script src="jscustom/utilities/modals/create-project/budget.js"></script>
+		<script src="jscustom/utilities/modals/create-project/settings.js"></script>
+		<script src="jscustom/utilities/modals/create-project/team.js"></script>
+		<script src="jscustom/utilities/modals/create-project/targets.js"></script>
+		<script src="jscustom/utilities/modals/create-project/files.js"></script>
+		<script src="jscustom/utilities/modals/create-project/complete.js"></script>
+		<script src="jscustom/utilities/modals/create-project/main.js"></script>
 <!--end::Page Custom Javascript-->
 <!--end::Javascript-->
 </body>
