--- a/views/include/_order_form.ejs
+++ b/views/include/_order_form.ejs
@@ -55,48 +55,31 @@
             <div class="card-body pt-0">
                 <div class="d-flex flex-column gap-10">
                     <div class="row">
-                        <div class="col-6">
-                            <!--begin::Input group-->
-                            <div class="fv-row">
-                                <!--begin::Label-->
-                                <label class="required form-label">Product</label>
-                                <!--end::Label-->
-                                <!--begin::Select2-->
-                                <input type="text" class="form-control" id="item" >
-                                <!--end::Select2-->
-                            </div>
-                            <!--end::Input group-->
-                        </div>
-                        <div class="col-6">
-                            <!--begin::Input group-->
-                            <div class="fv-row">
-                                <!--begin::Label-->
-                                <label class="required form-label">Price</label>
-                                <!--end::Label-->
-                                <!--begin::Select2-->
-                                <input type="number" class="form-control" id="price" >
-                                <!--end::Select2-->
-                            </div>
-                            <!--end::Input group-->
+                        <!--begin::Search-->
+                        <div class="d-flex align-items-center position-relative my-1">
+                            <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
+                            <span class="svg-icon svg-icon-1 position-absolute ms-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                    <rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="black" />
+                                    <path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="black" />
+                                </svg>
+                            </span>
+                            <!--end::Svg Icon-->
+                            <input type="text" id="search-box" onkeyup="sendData(this)" class="form-control form-control-solid w-250px ps-14" placeholder="Search Products" />
                         </div>
                         <!--begin::Input group-->
-                        <div class="fv-row d-flex justify-content-end mt-2">
-                            <!--begin::Button-->
-                            <span id="kt_ecommerce_add_order_submit" class="btn btn-primary">
-                                Add
-                            </span>
-                            <!--end::Button-->
+                        <!-- <input type="text" id="productSearchResult"> -->
+                        <div class="align-items-center my-2 col-6" id="">
+                            <a id="productSearchResult"></a>
                         </div>
-                        <!--end::Input group-->
                     </div>
-                    
-                    <!--begin::Input group-->
+                    <!--end::Search-->
                     <div>
                         <!--begin::Selected products-->
                         <!--begin::Total price-->
                         <div class="fw-bolder fs-4">Total Cost:  &#8358;
                             <span id="kt_ecommerce_edit_order_total_price">0.00</span>
-                            <input type="text" id="total_price" name="total_price">
+                            <input type="hidden" id="total_price" name="total_price">
                         </div>
                         <!--end::Total price-->
                     </div>
@@ -112,7 +95,7 @@
                                 <th class="min-w-200px">Product</th>
                                 <th class="min-w-100px text-end pe-5">Action</th>
                             </tr>
-                        </thead>
+                        </thead> 
                         <!--end::Table head-->
 
                         <!--begin::Table body-->
