--- a/views/include/_order_form.ejs
+++ b/views/include/_order_form.ejs
@@ -65,13 +65,12 @@
                                 </svg>
                             </span>
                             <!--end::Svg Icon-->
-                            <input type="text" id="search-box" onkeyup="sendData(this)" class="form-control form-control-solid w-250px ps-14" placeholder="Search Products" />
+                            <input type="text" id="item" name="" class="form-control form-control-solid w-250px ps-14" placeholder="Search Products" />
+                            <input type="text" id="price" name="" class="form-control form-control-solid w-250px ps-14" />
+                            <!-- <input type="text" id="item" onkeyup="sendData(this)" name="" class="form-control form-control-solid w-250px ps-14" placeholder="Search Products" /> -->
+                            <button type="button" id="kt_ecommerce_add_order_submit" class="btn btn-primary">Add</button>
                         </div>
                         <!--begin::Input group-->
-                        <!-- <input type="text" id="productSearchResult"> -->
-                        <div class="align-items-center my-2 col-6" id="">
-                            <a id="productSearchResult"></a>
-                        </div>
                     </div>
                     <!--end::Search-->
                     <div>
