--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,5 +1,5 @@
 <!-- Start Header section -->
-<%- include("../include/_header")%>
+<%- include("include/_header")%>
 <!-- End header section -->
 
 <!--begin::Content-->
@@ -223,7 +223,7 @@
                                 <!--end::Table head-->
                                 <!--begin::Table body-->
                                 <tbody>
-                                    <%- include("../include/_show")%>
+                                    <%- include("include/_show")%>
                                 </tbody>
                                 <!--end::Table body-->
                             </table>
@@ -283,5 +283,5 @@
 
 
 <!-- Start Header section -->
-<%- include("../include/_footer")%>
+<%- include("include/_footer")%>
 <!-- End header section -->
