--- a/views/dump/update_order.ejs
+++ b/views/dump/update_order.ejs
@@ -186,7 +186,7 @@
                                                 <td>
                                                     <div class="d-flex align-items-center" data-kt-ecommerce-edit-order-filter="product" data-kt-ecommerce-edit-order-id="product_30">
                                                         <div class="ms-5">
-                                                            <a class="text-gray-800 text-hover-primary fs-5 fw-bolder"><%= products.items[i].toUpperCase() %></a>
+                                                            <a class="text-gray-800 text-hover-primary fs-5 fw-bolder"><%= products.items[i].item.toUpperCase() %></a>
                                                             <!-- <input type='hidden' value='${items.item}' name='item[]' /> -->
                                                             <div class="fw-bold fs-7">Price: &#8358;
                                                                 <span class="item-price" data-kt-ecommerce-edit-order-filter="price"><%= products.price[i] %></span>
