--- a/views/admin/create_order.ejs
+++ b/views/admin/create_order.ejs
@@ -1,5 +1,5 @@
 <!-- Start Header section -->
-<%- include("../include/_header")%>
+<%- include("include/_header")%>
 <!-- End header section -->
 
 
@@ -61,7 +61,7 @@
     <div class="post d-flex flex-column-fluid" id="kt_post">
         <!--begin::Container-->
         <div id="kt_content_container" class="container-xxl">
-            <%- include("../include/_order_form")%>
+            <%- include("include/_order_form")%>
         </div>
         <!--end::Container-->
     </div>
@@ -72,5 +72,5 @@
 
 
 <!-- Start Header section -->
-<%- include("../include/_footer")%>
+<%- include("include/_footer")%>
 <!-- End header section -->
