--- a/views/admin/view_order.ejs
+++ b/views/admin/view_order.ejs
@@ -1,5 +1,5 @@
 <!-- Start Header section -->
-<%- include("../include/_header")%>
+<%- include("include/_header")%>
 <!-- End header section -->
 
 
@@ -114,5 +114,5 @@
 
 
 <!-- Start Header section -->
-<%- include("../include/_footer")%>
+<%- include("include/_footer")%>
 <!-- End header section -->
