--- a/views/users/include/_footer.ejs
+++ b/views/users/include/_footer.ejs
@@ -52,9 +52,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!--begin::application javascript-->
-<!-- <script src="js/carting.js"></script> -->
-<!-- <script src="js/application.js"></script> -->
-<script src="js/appsettings.js"></script>
+<script src="js/carting.js"></script>
+<script src="js/application.js"></script>
+<script src="js/app_settings.js"></script>
 
 <!--end::application javascript-->
 
