--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -313,21 +313,7 @@
                                 <!--end::Header-->
                                 <!--begin::Body-->
                                 <div class="card-body pt-2">
-                                    <!--begin::Item-->
-                                    <div class="d-flex align-items-center mb-8">
-                                        <!--begin::Bullet-->
-                                        <span class="bullet bullet-vertical h-40px bg-success"></span>
-                                        <!--end::Bullet-->
-                                        
-                                        <!--begin::Description-->
-                                        <div class="flex-grow-1 mx-5">
-                                            <a href="#" class="text-gray-800 text-hover-primary fw-bolder fs-6">Create FireStone Logo</a>
-                                            <span class="text-muted fw-bold d-block">Due in 2 Days</span>
-                                        </div>
-                                        <!--end::Description-->
-                                        <span class="badge badge-light-success fs-8 fw-bolder">Edit</span>
-                                    </div>
-                                    <!--end:Item-->
+                                    <%- include("include/_show_todo_list") %> 
                                 </div>
                                 <!--end::Body-->
                             </div>
